# cursor-performance-comparison

./: docker-compose.yml
front/: package-lock.json  package.json
front/.devcontainer/: devcontainer.json
front/pkg/: README.md  canvas_draw_lib.d.ts  canvas_draw_lib.js  canvas_draw_lib_bg.wasm  canvas_draw_lib_bg.wasm.d.ts  package.json
front/src/: Cursor.tsx  JavascriptVer.tsx  WasmVer.tsx  main.tsx
front/src/hooks/: useCursor.ts  useCursorWasm.ts
wasm/: Cargo.toml
wasm/.devcontainer/: devcontainer.json
wasm/src/: lib.rs
